# trd_ticker

./: .env.default  README.md  pyproject.toml
agent_ticker/: agent.py  prompt.py
agent_ticker/sub_agents/market_fetcher/: agent.py  prompt.py
agent_ticker/sub_agents/query_ticker/: agent.py  prompt.py
